--- a/attendance/static/scss/style.scss
+++ b/attendance/static/scss/style.scss
@@ -25,6 +25,12 @@
     } 
 }
 
+/* Html Scrollbar Effect */
+
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     background-color:#daeaf6;
     font-family: 'Karla', sans-serif !important;    
