--- a/attendance/templates/base.html
+++ b/attendance/templates/base.html
@@ -159,7 +159,7 @@
               </a>
             </li>
             <li class="list-group">
-              <a href="{% url 'subject:subject_list' %}" class="side_bar_link fill_d_blue">
+              <a href="#" class="side_bar_link fill_d_blue">
                 <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="book-open" role="img"
                   xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 576 512" class="mr-2">
                   <path fill="currentColor"
