--- a/attendance/templates/classroom/manage_students.html
+++ b/attendance/templates/classroom/manage_students.html
@@ -41,7 +41,14 @@
 	<h3 class="m-0">Students</h3>
 </div>
 {% endif %}
-
+<section class="pl-md-4 d-flex flex-column flex-md-row pt-md-2 my-3 mt-md-0">
+	<h5 class="text-muted d-none d-md-flex justify-content-center justify-content-md-start">
+		Classroom :
+	</h5>
+	<h5 class="ml-2 capitalize text-muted text-muted d-flex justify-content-center justify-content-md-start">
+		{{ class_obj }}
+	</h5>
+</section>
 <section class="container">
 	<div class="table-responsive table_wrapper table_box_shadow border_white" id="app">
 		<table class="table my-1 my-md-2">
