--- a/attendance/templates/subject/HourDetail.html
+++ b/attendance/templates/subject/HourDetail.html
@@ -31,7 +31,7 @@
 			<div class="d-flex flex-row justify-content-center">
 				<a href="{{ hour_obj.get_edit_url }}" class="mx-2 text-success">Edit</a>
 				<span>|</span>
-				<a href="{{ hour_obj.get_edit_url }}" class="mx-2 text-danger">Delete</a>
+				<a href="#Delete" class="mx-2 text-danger">Delete</a>
 				{% if hour_obj.hour_type == 'sel' %}
 				<span>|</span>
 				<a href="{{ s.get_add_student_url }}" class="mx-2 text-info">Add Students</a>
