--- a/attendance/templates/subject/HourEdit.html
+++ b/attendance/templates/subject/HourEdit.html
@@ -13,7 +13,14 @@
 {% endblock %}
 
 {% block content %}
-
+<section class="pl-md-4 d-flex flex-column flex-md-row pt-md-2">
+	<h5 class="text-muted d-none d-md-flex justify-content-center justify-content-md-start">
+		Classroom :
+	</h5>
+	<h5 class="ml-2 capitalize text-muted text-muted d-flex justify-content-center justify-content-md-start">
+		{{ class_obj }}
+	</h5>
+</section>
 <section class="container px-md-4 pb-4 body_box_shadow border_white mx-md-3">
 	<div class="text-center text_d_blue arvo my-4">
 		<h3 class="m-0">Edit&nbsp;Subjects</h3>
