--- a/attendance/templates/timetable/showsubjects.html
+++ b/attendance/templates/timetable/showsubjects.html
@@ -65,12 +65,12 @@
         <table class="table my-1 my-md-2">
             <thead>
                 <tr class="text-center text_d_blue">
-                    <th scope="col" class="upper_case bbr">Days/Hour</td>
-                    <th scope="col" class="bb">I</td>
-                    <th scope="col" class="bb">II</td>
-                    <th scope="col" class="bb">III</td>
-                    <th scope="col" class="bb">IV</td>
-                    <th scope="col" class="bb">V</td>
+                    <th scope="col" class="upper_case bbr">Day&nbsp;Order&nbsp;/&nbsp;Period</td>
+                    <th scope="col" class="bb">1</td>
+                    <th scope="col" class="bb">2</td>
+                    <th scope="col" class="bb">3</td>
+                    <th scope="col" class="bb">4</td>
+                    <th scope="col" class="bb">5</td>
                 </tr>
             </thead>
             <tbody>
