--- a/attendance/static/css/style.css
+++ b/attendance/static/css/style.css
@@ -24,6 +24,11 @@
   }
 }
 
+/* Html Scrollbar Effect */
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #daeaf6;
   font-family: 'Karla', sans-serif !important;
