--- a/attendance/templates/classroom/edit_classroom.html
+++ b/attendance/templates/classroom/edit_classroom.html
@@ -5,23 +5,100 @@
 <title>SAMS | {{get_obj|upper}} | Manage Classroom</title>
 {% endblock %}
 {% block content %}
-<div class="card">
-    <div class="card-body">
-        <a href="{% url 'timetable:setchoose' get_obj.id %}" class="btn btn-info float-right">Timetable</a>
-        <h5>Classroom Id :<small>{{get_obj.id}}</small></h5>
-        <h5>Course :<small>{{get_obj.course}}</small></h5>
-        <h5>Year :<small>{{get_obj.get_year_display}}</small></h5>
-        <h5>Section :<small>{{get_obj.get_sec_display}}</small></h5>
-        <h5>Tutor :<small>{{get_obj.tutor}}</small></h5>
-    </div>
-    <div class="card-footer">
-        <a href="{% url 'classroom:manage_students' get_obj.id %}" class="btn btn-primary">Manage Students</a>
-        <a href="{% url 'subject:hour_list' get_obj.id %}" class="btn btn-primary">Manage Subject</a>
-        <button type="button" data-toggle="modal" data-target="#edit-modal" data-backdrop="static"
-            class="btn btn-info float-right mx-2">Edit</button>
-        <a href="{% url 'classroom:createclass' %}" class="btn btn-secondary float-right">Back</a>
-    </div>
-</div>
+<article class="row d-flex justify-content-center justify-content-md-between align-items-center mb-3 mx-md-5">
+    <!-- Edit Icon -->
+    <section class="card card_box_shadow border_white m-3 " style="width: 17.5rem;">
+        <div class="card-body d-flex justify-content-center text_d_blue py-5">
+            <!-- Icon -->
+            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bi bi-pen" role="img"
+                xmlns="http://www.w3.org/2000/svg" width="7.5em" height="7.5em" fill="currentColor" class="bi bi-pen"
+                viewBox="0 0 16 16">
+                <path
+                    d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z" />
+            </svg>
+            <!-- Edit Link -->
+            <a type="button" data-toggle="modal" data-target="#edit-modal" data-backdrop="static"
+                class="card-link stretched-link text-center"></a>
+            <!-- <a href="{% url 'classroom:manage_students' get_obj.id %}" class="card-link stretched-link text-center"> -->
+        </div>
+        <div class="card-footer border_color_white bg-transparent text-center text_d_blue py-3">
+            <h2 class="text-body font_size_normal font-weight-bold mb-0">
+                Edit
+            </h2>
+        </div>
+    </section>
+    <!-- Student Icon -->
+    <section class="card card_box_shadow border_white m-3" style="width: 17.5rem;">
+        <div class="card-body d-flex justify-content-center text_d_blue py-5">
+            <!-- Icon -->
+            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="user-graduate" role="img"
+                xmlns="http://www.w3.org/2000/svg" width="7.5em" height="7.5em" viewBox="0 0 448 512"
+                class="fa-user-graduate">
+                <path fill="currentColor"
+                    d="M319.4 320.6L224 416l-95.4-95.4C57.1 323.7 0 382.2 0 454.4v9.6c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-9.6c0-72.2-57.1-130.7-128.6-133.8zM13.6 79.8l6.4 1.5v58.4c-7 4.2-12 11.5-12 20.3 0 8.4 4.6 15.4 11.1 19.7L3.5 242c-1.7 6.9 2.1 14 7.6 14h41.8c5.5 0 9.3-7.1 7.6-14l-15.6-62.3C51.4 175.4 56 168.4 56 160c0-8.8-5-16.1-12-20.3V87.1l66 15.9c-8.6 17.2-14 36.4-14 57 0 70.7 57.3 128 128 128s128-57.3 128-128c0-20.6-5.3-39.8-14-57l96.3-23.2c18.2-4.4 18.2-27.1 0-31.5l-190.4-46c-13-3.1-26.7-3.1-39.7 0L13.6 48.2c-18.1 4.4-18.1 27.2 0 31.6z">
+                </path>
+            </svg>
+            <!-- Student Link -->
+            <a href="{% url 'classroom:manage_students' get_obj.id %}" target="_blank" rel="noopener noreferrer"
+                class="card-link stretched-link text-center">
+        </div>
+        <div class="card-footer border_color_white bg-transparent text-center text_d_blue py-3">
+            <h2 class="text-body font_size_normal font-weight-bold mb-0">
+                Students
+            </h2>
+        </div>
+    </section>
+    <!-- Subject Icon -->
+    <section class="card card_box_shadow border_white m-3 " style="width: 17.5rem;">
+        <div class="card-body d-flex justify-content-center text_d_blue py-5">
+            <!-- Icon -->
+            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="book-open" role="img"
+                xmlns="http://www.w3.org/2000/svg" width="7.5em" height="7.5em" viewBox="0 0 576 512">
+                <path fill="currentColor"
+                    d="M542.22 32.05c-54.8 3.11-163.72 14.43-230.96 55.59-4.64 2.84-7.27 7.89-7.27 13.17v363.87c0 11.55 12.63 18.85 23.28 13.49 69.18-34.82 169.23-44.32 218.7-46.92 16.89-.89 30.02-14.43 30.02-30.66V62.75c.01-17.71-15.35-31.74-33.77-30.7zM264.73 87.64C197.5 46.48 88.58 35.17 33.78 32.05 15.36 31.01 0 45.04 0 62.75V400.6c0 16.24 13.13 29.78 30.02 30.66 49.49 2.6 149.59 12.11 218.77 46.95 10.62 5.35 23.21-1.94 23.21-13.46V100.63c0-5.29-2.62-10.14-7.27-12.99z">
+                </path>
+            </svg>
+            <!-- Subject Link -->
+            <a href="{% url 'subject:hour_list' get_obj.id %}" target="_blank" rel="noopener noreferrer"
+                class="card-link stretched-link text-center">
+        </div>
+        <div class="card-footer border_color_white bg-transparent text-center text_d_blue py-3">
+            <h2 class="text-body font_size_normal font-weight-bold mb-0">
+                Subjects
+            </h2>
+        </div>
+    </section>
+    <!-- Timetable Icon -->
+    <section class="card card_box_shadow border_white m-3 " style="width: 17.5rem;">
+        <div class="card-body d-flex justify-content-center text_d_blue py-5">
+            <!-- Icon -->
+            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bi bi-calendar3" role="img"
+                xmlns="http://www.w3.org/2000/svg" width="7.5em" height="7.5em" fill="currentColor"
+                class="bi bi-calendar3" viewBox="0 0 16 16">
+                <path
+                    d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z">
+                </path>
+                <path
+                    d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z">
+                </path>
+            </svg>
+            <!-- Timetable Link -->
+            <a href="{% url 'timetable:setchoose' get_obj.id %}" target="_blank" rel="noopener noreferrer"
+                class="card-link stretched-link text-center">
+        </div>
+        <div class="card-footer border_color_white bg-transparent text-center text_d_blue py-3">
+            <h2 class="text-body font_size_normal font-weight-bold mb-0">
+                Timetable
+            </h2>
+        </div>
+    </section>
+</article>
+
+<a href="{% url 'classroom:createclass' %}" class="btn btn-secondary float-right">Back</a>
+<h5>Classroom Id :<small>{{get_obj.id}}</small></h5>
+<h5>Classroom :<small class="capitalize">{{get_obj}}</small></h5>
+<h5>Tutor :<small>{{get_obj.tutor}}</small></h5>
+
 <div class="modal fade" id="edit-modal">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content border_white modal_box_shadow">
