--- a/attendance/templates/timetable/timetable.html
+++ b/attendance/templates/timetable/timetable.html
@@ -17,12 +17,19 @@
 {% endblock %}
 
 {% block content %}
+<section class="pl-md-4 d-flex flex-column flex-md-row pt-md-2 my-3 mt-md-0">
+     <h5 class="text-muted d-none d-md-flex justify-content-center justify-content-md-start">
+          Classroom :
+     </h5>
+     <h5 class="ml-2 capitalize text-muted text-muted d-flex justify-content-center justify-content-md-start">
+          {{ c_object }}
+     </h5>
+</section>
 <section class="container px-md-4 body_box_shadow border_white mx-md-3">
      <div class="text-center text_d_blue arvo my-4">
           <h3 class="m-0">Create&nbsp;Timetable Form</h3>
      </div>
-     <form action="{% url 'timetable:createtimetable' c_object.id set_id %}" method="POST"
-          id="create_timetable_form">
+     <form action="{% url 'timetable:createtimetable' c_object.id set_id %}" method="POST" id="create_timetable_form">
           {% csrf_token %}
           <div class="form-row">
                <div class="form-group col-md-6 pl-md-2">
@@ -46,7 +53,8 @@
                <div
                     class="form-group col-12 d-flex flex-column flex-md-row justify-content-center justify-content-md-end">
                     <a href="{% url 'timetable:setchoose' c_object.id %}"
-                         class="btn border_white btn-cust neu_icon text-primary align-self-center mt-2 mt-md-0">Back to choose set</a>
+                         class="btn border_white btn-cust neu_icon text-primary align-self-center mt-2 mt-md-0">Back to
+                         choose set</a>
                     <a href="{% url 'timetable:showsubjects' c_object.id set_id %}"
                          class="btn border_white btn-cust neu_icon text-primary align-self-center mt-2 mt-md-0">Back to
                          Timetable</a>
