Dashboard Update 0.2 + others
Dashboard :
+ Calender wise chart generation (day. week, month)
+ Classroom list will be generate in order of year and sec

UI :
+ Added classroom name to some of the html
+ table now has the custome scroll bar ui
+ smooth scroll on page down & up in add students page
+ fixed classroom manage page

Backend :
+ fixed password to hash value

Others :
+ updated requirements.txt

--- a/attendance/static/css/style.css
+++ b/attendance/static/css/style.css
@@ -24,6 +24,14 @@
   }
 }
 
+.simplebar-content-wrapper {
+  overflow: auto;
+}
+
+.simplebar-scrollbar::before {
+  background-color: #b8b9be;
+}
+
 /* Html Scrollbar Effect */
 html {
   scroll-behavior: smooth;
