--- a/attendance/templates/classroom/edit_classroom.html
+++ b/attendance/templates/classroom/edit_classroom.html
@@ -40,7 +40,7 @@
             </svg>
             <!-- Student Link -->
             <a href="{% url 'classroom:manage_students' get_obj.id %}" target="_blank" rel="noopener noreferrer"
-                class="card-link stretched-link text-center">
+                class="card-link stretched-link text-center"></a>
         </div>
         <div class="card-footer border_color_white bg-transparent text-center text_d_blue py-3">
             <h2 class="text-body font_size_normal font-weight-bold mb-0">
@@ -60,7 +60,7 @@
             </svg>
             <!-- Subject Link -->
             <a href="{% url 'subject:hour_list' get_obj.id %}" target="_blank" rel="noopener noreferrer"
-                class="card-link stretched-link text-center">
+                class="card-link stretched-link text-center"></a>
         </div>
         <div class="card-footer border_color_white bg-transparent text-center text_d_blue py-3">
             <h2 class="text-body font_size_normal font-weight-bold mb-0">
@@ -84,7 +84,7 @@
             </svg>
             <!-- Timetable Link -->
             <a href="{% url 'timetable:setchoose' get_obj.id %}" target="_blank" rel="noopener noreferrer"
-                class="card-link stretched-link text-center">
+                class="card-link stretched-link text-center"></a>
         </div>
         <div class="card-footer border_color_white bg-transparent text-center text_d_blue py-3">
             <h2 class="text-body font_size_normal font-weight-bold mb-0">
