--- a/attendance/templates/classroom/manage_students.html
+++ b/attendance/templates/classroom/manage_students.html
@@ -50,7 +50,7 @@
 	</h5>
 </section>
 <section class="container">
-	<div class="table-responsive table_wrapper table_box_shadow border_white" id="app">
+	<div data-simplebar class="table-responsive table_wrapper table_box_shadow border_white" id="app">
 		<table class="table my-1 my-md-2">
 			<thead>
 				<tr class="text-center text_d_blue">
