--- a/attendance/static/scss/style.scss
+++ b/attendance/static/scss/style.scss
@@ -24,6 +24,13 @@
         scrollbar-width: none;
     } 
 }
+.simplebar-content-wrapper {
+    overflow: auto;
+}
+
+.simplebar-scrollbar::before {
+    background-color: #b8b9be;    
+}
 
 /* Html Scrollbar Effect */
 
