--- a/attendance/templates/dashboard/dashboard.html
+++ b/attendance/templates/dashboard/dashboard.html
@@ -31,10 +31,21 @@
         border-bottom-left-radius: 0rem !important;
         border-bottom-right-radius: 0rem !important;
     }
+
+    .nav-tabs:hover {
+        font-weight: 700 !important;
+    }
 </style>
 {% endblock %}
 
 {% block content %}
+<!-- Date -->
+<article class="form d-flex flex-column flex-md-row mt-3">
+    <div class="form-group mb-md-0 pl-md-4 d-flex justify-content-center justify-content-md-start text_d_blue">
+        <input class="btn mx-md-0 cust_date" type="date" id="datePicker" name="date" data-toggle="tooltip"
+            title="Click the Date Icon" />
+    </div>
+</article>
 <article class="row d-none justify-content-center justify-content-md-start my-3 mx-0 mx-md-4">
     <label for="">Student Roll No.</label>
     <input type="text" class="input_cust text_d_blue form-control col-2 mx-2" id="rollno">
@@ -42,28 +53,26 @@
         id="student-rollno">Submit</button>
 </article>
 <!-- List of Classes Menu -->
-<ul class="nav nav-tabs my-4 mx-0 mx-md-4 mt-md-0" style="border-color: #c9d7e2;" id="class_list">
+<ul class="nav nav-tabs my-4 mx-0 mx-md-4 mt-md-0 d-flex justify-content-center justify-content-md-start align-items-center"
+    style="border-color: #c9d7e2;" id="class_list">
     <li class="nav-item">
         <button type="button"
-            class="nav-link nav-tabs mx-1 btn border_white btn-cust neu_icon text_d_blue align-self-center active font-weight-bold"
+            class="nav-link nav-tabs m-2 btn border_white btn-cust neu_icon text_d_blue align-self-center active font-weight-bold"
             id="class_all">All</button>
     </li>
     {% for class in classes %}
     <li class="nav-item">
         <button type="button"
-            class="nav-link nav-tabs btn border_white btn-cust neu_icon text_d_blue align-self-center capitalize mx-1 classroom"
+            class="nav-link nav-tabs btn border_white btn-cust neu_icon text_d_blue align-self-center capitalize m-2 classroom"
             data-classid="{{ class.id }}">
             {{ class }}
         </button>
     </li>
     {% endfor %}
 </ul>
-<ul>
-
-</ul>
 <!-- * Dashboard -->
 <!-- Overall Totals -->
-<article class="row d-flex justify-content-center justify-content-md-start my-3 mx-0 mx-md-4">
+<article class="row d-none justify-content-center justify-content-md-start my-3 mx-0 mx-md-4">
     <section class="card card_box_shadow border_white mb-4 mx-2 mx-md-3" style="width: 13rem;">
         <div class="card-header border_color_white bg-transparent text-center text_d_blue py-3">
             <h2 class="text-body h5 mb-0">
@@ -109,8 +118,19 @@
         </div>
     </section>
 </article>
+<!-- Calender-wise Line Chart -->
+<section class="card card_box_shadow border_white mb-4 mx-2 m-md-2" style="width: 40rem;">
+    <div class="card-header border_color_white bg-transparent text-center text_d_blue py-3">
+        <h2 class="text-right font_size_normal mb-0 ml-4">
+            Day&nbsp;Week&nbsp;Month&nbsp;
+        </h2>
+    </div>
+    <div class="card-body">
+        <canvas id="calender-line-chart" data-url="{% url 'dashboard:attendance_calender' %}"></canvas>
+    </div>
+</section>
 <!-- Statistical Data -->
-<article class="row d-flex justify-content-center justify-content-md-start my-3 mx-0 mx-md-4">
+<article class="row d-noe justify-content-center justify-content-md-start my-3 mx-0 mx-md-4">
     <!-- Doughnut Chart -->
     <section class="card card_box_shadow border_white mb-4 mx-2 m-md-2" style="width: 18rem;">
         <div class="card-body">
@@ -136,6 +156,13 @@
 </article>
 
 <script>
+    // Current date
+    var now = new Date();
+    var day = ("0" + now.getDate()).slice(-2);
+    var month = ("0" + (now.getMonth() + 1)).slice(-2);
+    var today = now.getFullYear() + "-" + (month) + "-" + (day);
+
+    $('#datePicker').val(today);
     // Declaring it as global for data updating purpose
     // Overall percentage of Present & Absent in doughnut pie chart 
     var $overall_perc = $("#doughnut-chart");
@@ -147,7 +174,8 @@
             datasets: [{
                 data: [50, 50],
                 backgroundColor: [
-                    '#28a745', '#dc3545',
+                    // '#28a745', '#dc3545',
+                    '#0e5593', '#062743'
                 ],
             }],
         },
@@ -163,7 +191,151 @@
         }
     });
 
+    var delayed; // animation
+    // Footer total number of present & absent for most of the charts
+    const footer = (tooltipItems) => {
+        let sum = 0;
 
+        tooltipItems.forEach(function (tooltipItem) {
+            sum += tooltipItem.parsed.y;
+        });
+        return 'Total: ' + sum;
+    };
+
+    var $calender_data = $("#calender-line-chart");
+    var cal1 = $calender_data[0].getContext("2d");
+    var class_chart = new Chart(cal1, {
+        type: 'line',
+        data: {
+            labels: [
+                "Day 1", "Day 2", "Day 3", "Day 4", "Day 5", "Day 6", "Day 7"
+            ],
+            datasets: [
+                {
+                    label: 'Present',
+                    data: [90, 80, 70, 76, 90, 65, 84],
+                    backgroundColor: '#0e559350',
+                    borderColor: "#0e5593",
+                    borderWidth: 3,
+                    borderRadius: 4,
+                    color: '#062743',
+                    borderSkipped: false,
+                    pointStyle: 'circle',
+                    pointRadius: .8,
+                    fill: "start",
+                },
+                {
+                    label: 'Absent',
+                    data: [10, 30, 30, 24, 10, 35, 16],
+                    backgroundColor: '#06274350',
+                    borderColor: "#062743",
+                    borderWidth: 3,
+                    borderRadius: 4,
+                    borderSkipped: false,
+                    pointStyle: 'circle',
+                    pointRadius: .8,
+                    fill: "start",
+                }
+            ]
+        },
+        options: {
+            responsive: true,
+            animation: {
+                onComplete: () => {
+                    delayed = true;
+                },
+                delay: (context) => {
+                    let delay = 0;
+                    if (context.type === 'data' && context.mode === 'default' && !delayed) {
+                        delay = context.dataIndex * 300 + context.datasetIndex * 100;
+                    }
+                    return delay;
+                },
+                y: {
+                    easing: 'easeInOutElastic',
+                    from: (ctx) => {
+                        if (ctx.type === 'data') {
+                            if (ctx.mode === 'default' && !ctx.dropped) {
+                                ctx.dropped = true;
+                                return 0;
+                            }
+                        }
+                    }
+                }
+            },
+            scales: {
+                x: {
+                    title: {
+                        display: true,
+                        text: 'Days',
+                        color: '#062743',
+                        font: {
+                            family: 'karla',
+                            size: 20,
+                            // weight: 'bold',
+                            lineHeight: 1.0,
+                        },
+                        padding: { top: 8, left: 0, right: 0, bottom: 0 }
+                    },
+                    beginAtZero: true,
+                    grid: {
+                        display: false,
+                    }
+                },
+                y: {
+                    title: {
+                        display: true,
+                        text: 'Attendance',
+                        color: '#062743',
+                        font: {
+                            family: 'karla',
+                            size: 20,
+                            // weight: 'bold',
+                            lineHeight: 1.0,
+                        },
+                        padding: { top: 8, left: 0, right: 0, bottom: 0 }
+                    },
+                    beginAtZero: true,
+                    grid: {
+                        display: false,
+                    }
+                }
+            },
+            interaction: {
+                intersect: false,
+                mode: "index"
+            },
+            plugins: {
+                filler: {
+                    propagate: false,
+                    drawTime: 'beforeDatasetsDraw'
+                },
+                pointBackgroundColor: '#fff',
+                radius: 10,
+                legend: {
+                    labels: {
+                        usePointStyle: true,
+                    },
+                    position: {
+                        display: false
+                    },
+                },
+                tooltip: {
+                    position: "nearest",
+                    callbacks: {
+                        footer: footer,
+                    },
+                },
+            },
+            elements: {
+                line: {
+                    // Smooth curved line
+                    tension: true ? 0.4 : 0
+                },
+            }
+
+        }
+    });
 
     $(function () {
         // Overall Totals
@@ -204,15 +376,6 @@
         $.ajax({
             url: $attendance_by_class.data("url"),
             success: function (data1) {
-                var delayed;
-                const footer = (tooltipItems) => {
-                    let sum = 0;
-
-                    tooltipItems.forEach(function (tooltipItem) {
-                        sum += tooltipItem.parsed.y;
-                    });
-                    return 'Total: ' + sum;
-                };
 
                 var ctx1 = $attendance_by_class[0].getContext("2d");
 
@@ -225,7 +388,7 @@
                                 label: 'Present',
                                 data: data1.present,
                                 backgroundColor: '#0e5593',
-                                borderColor: "#0e5593",
+                                borderColor: "#ffffff00",
                                 borderWidth: 2,
                                 borderRadius: 5,
                                 borderSkipped: false,
@@ -234,8 +397,10 @@
                             {
                                 label: 'Absent',
                                 data: data1.absent,
-                                backgroundColor: 'cyan',
-                                borderColor: "#daeaf6",
+                                // backgroundColor: 'cyan',
+                                // borderColor: "#daeaf6",
+                                backgroundColor: "#062743",
+                                borderColor: "#ffffff00",
                                 borderWidth: 2,
                                 borderRadius: 5,
                                 borderSkipped: false,
@@ -271,11 +436,17 @@
                                         lineHeight: 1.0,
                                     },
                                     padding: { top: 8, left: 0, right: 0, bottom: 0 }
-                                }
+                                },
+                                grid: {
+                                    display: false,
+                                },
                             },
                             y: {
                                 stacked: true,
                                 beginAtZero: true,
+                                grid: {
+                                    display: false,
+                                },
                             }
                         },
                         interaction: {
@@ -289,6 +460,7 @@
                                 },
                             },
                             tooltip: {
+                                position: "nearest",
                                 callbacks: {
                                     footer: footer,
                                 },
@@ -309,10 +481,29 @@
                 mychart.update('show');
             }
         });
-
+        // Overall percentage of Present & Absent in doughnut pie chart 
+        var $calender_all = $("#calender-line-chart");
+        var current_date = $('#datePicker').val()
+        $.ajax({
+            headers: {
+                "X-CSRFTOKEN": "{{ csrf_token }}",
+                'contentType': 'application/json;charset=utf-8',
+            },
+            url: $calender_all.data("url"),
+            type: 'post',
+            data: { 'current_date': current_date },
+            success: function (data1) {
+                // Updating the data for Line chart
+                class_chart.data.labels = data1.labels;
+                class_chart.data.datasets[0].data = data1.present;
+                class_chart.data.datasets[1].data = data1.absent;
+                class_chart.update('show');
+            }
+        });
     });
 
     $(document).ready(function () {
+
         $("#student-rollno").click(function () {
             var rollno = $("#rollno").val();
             $.ajax({
