--- a/attendance/templates/user_module/view_all_staff.html
+++ b/attendance/templates/user_module/view_all_staff.html
@@ -27,7 +27,7 @@
 		class="btn border_white btn-cust neu_icon text-primary align-self-center float-right mr-2 my-2">
 		Create Staff
 	</a>
-	<div class="table-responsive table_wrapper table_box_shadow border_white my-3" id="tab_res">
+	<div data-simplebar class="table-responsive table_wrapper table_box_shadow border_white my-3" id="tab_res">
 		<table class="table table-hover my-1 my-md-2">
 			<thead>
 				<tr class="text-center">
